2009-12-11  GatoLoko  <GatoLoko@gmail.com>

 * remotos.py: revision completa del modulo y adaptado para gestionar los
   remotos en la base de datos.
 * gatoscript.db: agregada la tabla "remotos".
 * protecciones.py: arreglados varios errores de formato.
 * antispam.py: corregido un fallo en la consulta sql usada para añadir nuevos
   filtros a la base de datos.

2009-12-06  GatoLoko  <GatoLoko@gmail.com>

 * protecciones.py: agregada una excepcion al anti_notice para que no expulse
   al bot de gestion de canales de IRC-Hispano.

2009-12-01  GatoLoko  <GatoLoko@gmail.com>

 * auxiliar.py: agregadas las funciones gatodb_cusor_execute() y
   gatodb_commit() para centralizar el acceso a la base de datos en un solo
   modulo.
 * auxiliar.py: cambiadas algunas variables para que sean privadas del modulo.
 * rss.py: modificado para usar el acceso a la base de datos mediante las
   funciones del modulo auxiliar.
 * protecciones.py: varios arreglos de formato.
 * antispam.py: modificado para usar el acceso a la base de datos mediante las
   funciones del modulo auxiliar.
 * antispam.py: reformas y arreglos varios.
 * gatoscript.db: agregados varios filtros y mejorados algunos de los ya
   existentes para ser mas eficientes.
 * whois.py: agregado el docstring a la funcion espacios.
 * whois.py: multiples arreglos de formato y eliminadas lineas innecesarias.
 * sysinfo.py: multiples arreglos de formato y eliminadas lineas innecesarias.
 * resaltados.py: agregado el docstring a la funcion realza_url_cb.
 * resaltados.py: multiples arreglos de formato.
 * p2p.py: multiples arreglos de formato.
 * ejemplo.py: pequeño arreglo.
 * antispam.py: pequeño arreglo.
 * gatoscript.conf: activado por defecto el realce de urls.
 
2009-11-30  GatoLoko  <GatoLoko@gmail.com>

 * instalador: arreglado (otra vez), esto no termina de funcionar nunca.
 * auxiliar.py: agregado el docstring a la funcion unidades.
 * auxiliar.py: eliminadas varias lineas comentadas que ya no son necesarias.