@@ -6,6 +6,8 @@
  * protecciones.py: arreglados varios errores de formato.
  * antispam.py: corregido un fallo en la consulta sql usada para añadir nuevos
    filtros a la base de datos.
+ * notas.py: agregado nuevo modulo para gestionar notas.
+ * gatoscript.py: activados los modulos: remotos.py y notas.py
 
 2009-12-06  GatoLoko  <GatoLoko@gmail.com>
 
